--- a/param_inference/NYC-Rotated-Box.ipynb
+++ b/param_inference/NYC-Rotated-Box.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "matplotlib.rc('font', **font)\n",
     "\n",
-    "box = 0.285\n",
+    "box = 0.c\n",
     "\n",
     "x = np.array(range(1, 15)) * box\n",
     "y = np.array([9720, 5001, 3446, 2707, 2295, 2039, 1886, 1788, 1675, 1607, 1586, 1575, 1568, 1568]) / 2\n",
@@ -112,12 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9949999999999999"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.285*7"
+   ]
   }
  ],
  "metadata": {
